--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,10 @@ body {
    font-size: 40px;
 }
 
-.into-div a {
+.tag {
     font-weight: 500;
     color: #5863E3;
+    margin-bottom: -10px;
 }
 
 /* ####################### */
@@ -31,6 +32,7 @@ form {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-bottom: 70px;
 }
 
 form textarea{
@@ -42,9 +44,11 @@ form textarea{
     font-style: normal;
     padding-top: 30px;
     color: #99999A;
-    border-width: 2;
-    border-color: gray;
+    border: 1px solid;
+    border-color: lightgray;
     font-size: 15px;
+    padding-left: 35px;
+    resize: none;
 }
 
 form div {
@@ -54,29 +58,32 @@ form div {
 }
 
 input[type=text] {
+    padding-left: 15px;
     background-color: #F8F8F8;
     font-family: "Roboto", sans-serif;
     font-weight: 600;
     font-style: normal;
     color: #99999A;
     border-color: gray;
-    border-width: ;
+    border: 1px solid;
+    border-color: lightgray;
     font-size: 15px;
     height: 20%;
     margin-bottom: 6.667%;
 }
 
 input[type=email] {
+    padding-left: 15px;
     background-color: #F8F8F8;
     font-family: "Roboto", sans-serif;
     font-weight: 600;
     font-style: normal;
     height: 20%;
     color: #99999A;
-    border-width: 0;
-    border-color: gray;
     font-size: 15px;
     margin-bottom: 6.667%;
+    border: 1px solid;
+    border-color: lightgray;
 }
 
 input[type=submit] {
@@ -84,14 +91,262 @@ input[type=submit] {
     font-family: "Roboto", sans-serif;
     font-weight: 600;
     font-style: normal;
-    vertical-align: ;
     color: #FBFBFF;
-    border-width: 2x;
     font-size: 15px;
-    border: none;
     height: 20%;
+    border: none;
 }
 
- 
+/* ################################## */
+
+section {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+section div {
+    width: 30%;
+    height: 200px;
+}
 
 
+.divs {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.icon-container {
+    position: relative;
+    background-color: #5968F4;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.icon {
+    position: absolute;
+    font-size: 50px;
+    color: #142682;
+    top: 15px;
+    left: 15px; 
+}
+
+.contact-h1, .contact-p {
+    margin-bottom: 10px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.contact-h1 {
+    color: #4E4D54;
+    font-weight: 600;
+}
+
+.contact-p {
+    color: #99999A;
+}
+
+/* ################ */
+
+.icon-container2 {
+    position: relative;
+    background-color: #5968F4;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.icon2 {
+    position: absolute;
+    font-size: 50px;
+    color: #142682;
+    top: 15px;
+    left: 15px; 
+}
+
+/* ##################### */
+
+.icon-container3 {
+    position: relative;
+    background-color: #5968F4;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.icon3 {
+    position: absolute;
+    font-size: 50px;
+    color: #142682;
+    top: 15px;
+    left: 20px; 
+}
+
+/* ############### */
+
+.photos {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+
+.photos h1 {
+   width: 45%;
+   font-size: 40px;
+}
+
+.photos p {
+    font-weight: 500;
+    color: #5863E3;
+    margin-bottom: 10px;
+}
+
+/* ############################## */
+
+main {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+}
+
+main div {
+    width: 30%;
+    height: 400px;
+}
+
+.image1 {
+    background-image: url(../images/1.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.image2 {
+    background-image: url(../images/2.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.image3 {
+    background-image: url(../images/3.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+/* ############################## */
+
+footer {
+    width: 100%;
+    height: 300px;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+}
+
+.left-side {
+    width: 30%;
+}
+
+.left-side h1 {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 20px;
+    font-size: 30px;
+}
+
+.left-side p {
+    color: #99999A;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.footer-img1 {
+    width: 46px;
+    height: 46px;
+    margin-right: 3px;
+}
+
+.footer-img2 {
+    width: 42px;
+    height: 42px;
+    margin-right: 3px;
+}
+
+.footer-img3 {
+    width: 46px;
+    height: 46px;
+}
+
+
+/* ##################### */
+
+.right-side {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    height: 160px;
+}
+
+.right-side div {
+    width: 30%;
+}
+
+.footer-h1 {
+    color: #FFFFFF;
+    font-size: 18px;
+}
+
+.footer-h1, .footer-a {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    margin-bottom: 38px;
+}
+
+.footer-a {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+
+.footer-a-icon {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: #FFFFFF;
+}
+
+
+.footer-envelope {
+    margin-right: 3px;
+    color: #551A8B;
+}
+
+.footer-phone {
+    margin-right: 3px;
+    color: #551A8B;
+}
+
+.footer-location {
+    margin-right: 3px;
+    color: #551A8B;
+}
